<resources>
    <string name="app_name">Sustentabilidade</string>
    <string name="login_intro_message">LOGIN</string>
    <string name="email_address">Endereço de e-mail</string>
    <string name="senha_intro_message">Senha</string>
    <string name="login_message">Entrar</string>
    <string name="cadastrar_intro_message">Cadastrar</string>
    <string name="logo_description">Agroplus logo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_intro_message">Registro</string>
    <string name="account_type_message_intro">Tipo de conta</string>
    <string name="senha_agroplus">Senha membro AgroPlus</string>
    <string name="agroplus_account_message">Não tem conta AgroPlus?</string>
    <string name="sign_up_message">Cadastre-se.</string>
    <string name="forgot_your_password_intro_message">Esqueceu sua senha?</string>
    <string name="consultant_term">Consultor</string>
    <string name="productor_term">Produtor</string>
    <string name="professor_term">Professor</string>
    <string name="save_term">Salvar</string>
    <string name="create_program_intro">Criar Programa</string>
    <string name="create_farm_intro">Criar Fazenda</string>
    <string name="select_program_intro">Escolha um programa</string>
    <string name="name_create_farm_intro_message">Nomeie a fazenda</string>
    <string name="password_farm_message_intro">Defina a senha</string>
    <string name="success_saving_farm">Fazenda salva com sucesso.</string>
    <string name="alertdialog_body_intro_message">Insira a senha para participar desta fazenda.</string>
    <string name="alertdialog_title_intro_message">Participar de fazenda</string>
    <string name="create_certification_intro">Criar sistema</string>
    <string name="visualize_farm_intro">Visualizar fazenda</string>
    <string name="manage_certification_intro">Gerenciar sistemas</string>
    <string name="create_certification_button_desc">botão de criar sistemas.</string>
    <string name="dominion_term">Domínio</string>
    <string name="theme_term">Tema</string>
    <string name="subtheme_term">Sub Tema</string>
    <string name="question_term">Pergunta</string>
    <string name="create_term">Criar</string>
    <string name="manage_term">Gerenciar</string>
    <string name="choose_model">Selecione o tipo</string>
    <string name="parent_term">Vincular a</string>
    <string name="choose_name">Escolha um nome</string>
    <string name="finish_term">finalizar</string>
    <string name="repeat_signin">Cadastrar outro</string>
    <string name="certification_term">Sistemas</string>
    <string name="enter_weight_hint">Padrão: 1</string>
    <string name="define_indicator_weight_text">Definir peso</string>
    <string name="update_component_intro">Edição de componente</string>
    <string name="name_term">Nome</string>
    <string name="delete_term">Delete</string>
    <string name="select_farm_intro">Selecionar fazenda</string>
    <string name="program_term">Programa</string>
    <string name="farm_term">Fazenda</string>
    <string name="select_system_intro">Selecionar sistema</string>
    <string name="system_term">Sistemas</string>
    <string name="true_term">Verdadeiro</string>
    <string name="false_term">Falso</string>
    <string name="non_applicable_term">Não se aplica</string>
    <string name="note_term">Observações</string>
    <string name="value_term">Valor</string>
    <string name="answer_other_intro">Responder outra</string>
    <string name="prazo_term">Prazo</string>
    <string name="notes_intro">"Necessário preencher observação e data."</string>
    <string name="layout_answer_mode">"Escolha o modo de resposta:"</string>
    <string name="direct_description">All questions as a list to answer</string>
    <string name="tree_description">Tree question to select once a time to answer</string>
    <string name="add_note">Adicionar observação?</string>
    <string name="level_value_hint">Porcentagem requerida para o nível</string>
    <string name="farm_code_search">Código da fazenda</string>

    <string-array name="models">
        <item>Dimensão</item>
        <item>Tema</item>
        <item>Subtema</item>
        <item>Indicador</item>
        <item>Níveis</item>


    </string-array>
</resources>