<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        style="@style/textview_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragment.certificationfragments.answerquestionfragment.AnswerQuestionFragment">

        <TextView
            android:id="@+id/questionNameApplySystemTextView"
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <View
            android:id="@+id/divider8"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/black" />

        <RadioGroup
            android:id="@+id/booleanOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/trueRadioButtonAnswerQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/true_term" />

            <RadioButton
                android:id="@+id/falseRadioButtonAnswerQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/false_term" />

            <RadioButton
                android:id="@+id/nonApplicableRadioButtonAnswerQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/non_applicable_term" />
        </RadioGroup>

        <Switch
            android:id="@+id/switchNoteAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_note"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:id="@+id/noteLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/note_term" />

            <EditText
                android:id="@+id/noteAnswerApplySystemEditText"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                tools:ignore="LabelFor" />

            <TextView
                style="@style/edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/prazo_term" />

            <EditText
                android:id="@+id/dateAnswerApplySystemEditText"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:autofillHints="no"
                android:inputType="date"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/repeatAnswerApplySystemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorPrimaryDark"
                android:ellipsize="start"
                android:singleLine="true"
                android:text="@string/answer_other_intro"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/saveAnswerApplySystemButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/finish_term"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</layout>
