<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".fragment.certificationfragments.selectfarmcertitification.SelectFarmCertificationFragment">


        <TextView
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_farm_intro"
            android:textColor="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/edittext_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/program_term" />

            <TextView
                style="@style/edittext_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/farm_term" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/selectProgramSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/selectFarmSpinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <TextView
            style="@style/textview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_system_intro"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/selectSystemRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="240dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </LinearLayout>

</layout>
